[package]
name = "seoul-derive"
version = "0.2.1"
edition = "2021"
authors = [ "Acheul<seoul605.21@gmail.com>" ]
repository = "https://github.com/acheul/seoul-rs"
description = "trait Isomorphism - derive macro"
license = "MIT"
readme = "../readme.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.33"
syn = { version="2.0.39", features=["full"] }