[package]
name = "seoul"
version = "0.2.1"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]
repository = "https://github.com/acheul/seoul-rs"
description = "trait Isomorphism"
categories = ["data-structures"]
keywords = ["enum"]
readme = "../readme.md"
license = "MIT"
exclude = [
  "tests"
]

[dependencies]
seoul-derive = { path="../seoul-derive", version="0.2.1" }